# clipboard-manager

./: .gitignore  CLAUDE.md  README.md  build.sh  index.html  package-lock.json  package.json
src/: index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: clipboard.rs  commands.rs  db.rs  lib.rs  paste.rs  settings.rs  tray.rs
src/lib/: ipc.ts  types.ts
src/popup/: Popup.tsx  popup.css
src/settings/: Settings.tsx  ShortcutRecorder.tsx
